--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
             <div class="col-lg-6 align-self-center">
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <h1>
-                  <a href="" class="typewrite" data-period="1500" data-type='[ "Hi, Im Skill Clan.", "I Want to become Software Engineer.", "I Want to Change world.", "I want to Code." ]'> <br>
+                  <a href="" class="typewrite" data-period="1000" data-type='[ "Hi, We are Skill Clan.", "I Want to become Software Engineer.",  "I want to Code.","I Want to Change world." ]'> <br>
                     <span class="wrap"></span>
                   </a>
                 </h1>
                 <h6>Easiest Way Towards Learning</h6>
                 <h2><em>Skill</em><span>Clan</span></h2>
-                <p>Skill Clan is a skill based Learning classes. We provide Classes for kids and students. Our primary aim is to 
-                  give genuine learning experience to our youngsters.<br>
+                <p>Skill Clan is a <strong> skill based Learning classes.</strong> We provide Classes for kids and students. Our primary aim is to 
+                  give <strong> genuine learning experience</strong> to our youngsters.<br>
                 We want India to be the next super power and for that our future must be competent</p>
               </div>
             </div>
@@ -222,7 +222,8 @@
                   </div>
                   <div class="right-text">
                     <h4>Assignment and Test</h4>
-                    <p>After lectures we will provide Assignments and Homework questions. Peerwise counselling will be provided and overall performance will be monitored</p>
+                    <p> Assignments and Homework questions 
+                      Will be provided for deep learning of concepts. Peerwise counselling will be provided and overall performance will be monitored</p>
                   </div>
                 </div>
               </div>
@@ -233,7 +234,7 @@
                   </div>
                   <div class="right-text">
                     <h4>Perks and Certificates</h4>
-                    <p>Free Goodies like Tshirts etc. and Certificate will be given to the students on course completion</p>
+                    <p>Free Goodies and Swags and Certificate will be given to the students on course completion to Encourage them </p>
                   </div>
                 </div>
               </div>
@@ -244,7 +245,7 @@
                   </div>
                   <div class="right-text">
                     <h4>Genuine Learning</h4>
-                    <p>We want that our kids must learn the real coding- unlike the other platforms we will teach only on real IDEs and Google Virtual labs.</p>
+                    <p>We are strictly against Block based coding and want that our kids must learn the real coding- unlike the other platforms we will teach only on Real IDE's and Google Virtual labs.</p>
                   </div>
                 </div>
               </div>
