--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                   </div>
                   <div class="right-text">
                     <h4>Perks and Certificates</h4>
-                    <p>Free Goodies and Swags and Certificate will be given to the students on course completion to Encourage them </p>
+                    <p>Free Goodies, Swags and Certificates will be given to the students on course completion to Encourage them to Continue Learning </p>
                   </div>
                 </div>
               </div>
