--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <a href="#"><h4>SEO Agency &amp; Digital Marketing</h4></a>
                 <p>Lorem ipsum dolor sit amet, consectetur and sed doer ket eismod tempor incididunt ut labore et dolore magna...</p>
                 <div class="main-blue-button">
-                  <a href="#">Discover More</a>
+                  <a href="#">Discover More now</a>
                 </div>
               </div>
             </div>
