--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <a href="#"><h4>SEO Agency &amp; Digital Marketing</h4></a>
                 <p>Lorem ipsum dolor sit amet, consectetur and sed doer ket eismod tempor incididunt ut labore et dolore magna...</p>
                 <div class="main-blue-button">
-                  <a href="#">Discover More now</a>
+                  <a href="#">Discover More</a>
                 </div>
               </div>
             </div>
@@ -467,7 +467,7 @@
             <h2>Feel Free To Send Us a Message Us About your Carreer</h2>
             <p>Please press the button below to whatsapp us or to call us</p>
             <div class="phone-info">
-              <h4>For any enquiry, Whatsapp / Call Us: <span> <i class="fa fa-phone"></i> <a href="https://wa.me/919717020263">+91 97170 20263</a></span></h4>
+              <h4>For any enquiry, Whatsapp / Call Us: <span> <a href="https://wa.me/919717020263"> <i class="fa fa-phone"></i></a><a href="https://wa.me/919717020263">+91 97170 20263</a></span></h4>
             </div>
           </div>
         </div>
