--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <h1>
                   <a href="" class="typewrite" data-period="1000"
-                    data-type='[ "Hi, We are Skill Clan.", "I Want to become Software Engineer.",  "I want to Code.","I Want to Change world." ]'>
+                    data-type='[ "Hi, We are Skill Clan.", "I Want to become a Programmer.",  "I want to Learn Finance","I Want to become an Entrepreneur." ]'>
                     <br>
                     <span class="wrap"></span>
                   </a>
