--- a/index.html
+++ b/index.html
@@ -288,16 +288,16 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
-                <h4>Coding With C++</h4>
-                <span>Live</span>
+                <h4 style="color: #03a4ed;">Coding With C++</h4>
+                <span style="color: rgb(32, 173, 19);">Live</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="second-bar progress-skill-bar">
-                <h4>Programming With Python</h4>
-                <span>Live</span>
+                <h4 style="color: #03a4ed; "> Programming With Python</h4>
+                <span style="color: rgb(32, 173, 19); left: 69% ;">Live</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
@@ -305,7 +305,7 @@
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
                 <h4>Robotics</h4>
-                <span>Coming Soon</span>
+                <span style="color: rgb(17, 0, 255) ;">Coming Soon</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
