--- a/index.html
+++ b/index.html
@@ -177,20 +177,22 @@
               <div class="left-content header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <h1>
                   <a href="" class="typewrite" data-period="1000"
-                    data-type='[ "Hi, We are Skill Clan.", "I Want to become a Programmer.",  "I want to Learn Finance","I Want to become an Entrepreneur." ]'>
+                    data-type='[ "Hi, We are Skill Clan.", "I Want to become Software Engineer.",  "I want to Code.","I Want to Change world." ]'>
                     <br>
                     <span class="wrap"></span>
                   </a>
                 </h1>
-                <h6>The Easiest Way Towards Learning</h6>
+                <h6>Easiest Way Towards Learning</h6>
                 <h2><em>Skill</em><span>Clan</span></h2>
-                <p>Skill Clan is a <strong>skill-based learning academy</strong> . We provide Classes to students. Our focus is to give a <strong>genuine learning experience</strong> to our youngsters.
-                 <br>Our Vision is to make India the  <strong>next superpower</strong> and for that our youths must be competent</p>
+                <p>Skill Clan is a <strong> skill based Learning classes.</strong> We provide Classes for kids and
+                  students. Our primary aim is to
+                  give <strong> genuine learning experience</strong> to our youngsters.<br>
+                  We want India to be the next super power and for that our future must be competent</p>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="banner-right-image.jpeg" alt="team meeting">
+                <img src="assets/images/banner-right-image.png" alt="team meeting">
               </div>
             </div>
           </div>
@@ -229,8 +231,8 @@
                   </div>
                   <div class="right-text">
                     <h4>Assignment and Test</h4>
-                    <p> Regular assignments and homework questions
-                      will be provided for deep learning of concepts. Pairwise counseling will be provided and overall
+                    <p> Assignments and Homework questions
+                      Will be provided for deep learning of concepts. Peerwise counselling will be provided and overall
                       performance will be monitored</p>
                   </div>
                 </div>
@@ -242,8 +244,8 @@
                   </div>
                   <div class="right-text">
                     <h4>Perks and Certificates</h4>
-                    <p>Free Goodies, Swags, and Certificates will be given to the students on course completion to
-                      encourage them for Learning </p>
+                    <p>Free Goodies, Swags and Certificates will be given to the students on course completion to
+                      Encourage them to Continue Learning </p>
                   </div>
                 </div>
               </div>
@@ -254,7 +256,8 @@
                   </div>
                   <div class="right-text">
                     <h4>Genuine Learning</h4>
-                    <p>We are strictly against Block-based coding and want that our kids must learn the real coding- unlike the other platforms, we will teach only on Real IDE's and Google Virtual labs.</p>
+                    <p>We are strictly against Block based coding and want that our kids must learn the real coding-
+                      unlike the other platforms we will teach only on Real IDE's and Google Virtual labs.</p>
                   </div>
                 </div>
               </div>
@@ -276,32 +279,25 @@
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
           <div class="section-heading">
             <h2><em>Courses We <span>Offer</span></em></h2>
-            <p> We provide a variety of skill classes for our students. Our foremost priority is to give a genuine teaching experience. There's a high demand for skillful people, whether it's Coding, Robotics, Digital Marketing, Entrepreneurship, or Trading. We want India to be the next superpower so for that our youths should be competent.
-              <br>  We have well-planned courses from Beginner Level to the Advance Level. </p>
+            <p>We provide variety of skill set classes for kids and Students. Our primary aim is to
+              give genuine learning experience to our youngsters. There's a high demand of skillful people, whether it
+              is Coding, Robotics , Digital Marketing, Entrepreneurship or Trading.
+              We want India to be the next super power and for that our future must be competent <br> All these courses
+              are well planned from Beginner Level till the Advance Level. </p>
           </div>
           <div class="row">
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
-<<<<<<< HEAD
                 <h4 style="color: #03a4ed;">Coding With C++</h4>
                 <span style="color: rgb(32, 173, 19);">Live</span>
-=======
-                <h4>Coding With C++</h4>
-                <span style="font-size:small">Live</span>
->>>>>>> 7b06bb8e88fa9c8a17c956a532243b1a70c0165e
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="second-bar progress-skill-bar">
-<<<<<<< HEAD
                 <h4 style="color: #03a4ed; "> Programming With Python</h4>
                 <span style="color: rgb(32, 173, 19); left: 69% ;">Live</span>
-=======
-                <h4>Programming With Python</h4>
-                <span style="font-size:small">Live</span>
->>>>>>> 7b06bb8e88fa9c8a17c956a532243b1a70c0165e
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
@@ -309,11 +305,7 @@
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
                 <h4>Robotics</h4>
-<<<<<<< HEAD
                 <span style="color: rgb(17, 0, 255) ;">Coming Soon</span>
-=======
-                <span style="font-size:small">Coming Soon</span>
->>>>>>> 7b06bb8e88fa9c8a17c956a532243b1a70c0165e
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
@@ -321,7 +313,7 @@
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
                 <h4>Finance</h4>
-                <span style="font-size:small">Coming Soon</span>
+                <span>Coming Soon</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
@@ -329,7 +321,7 @@
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
                 <h4>Entrepreneurship</h4>
-                <span style="font-size:small">Coming Soon</span>
+                <span>Coming Soon</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
@@ -337,7 +329,7 @@
           </div>
         </div>
       </div>
-      <center><a class="nav-link" href="courseoverview.html"><button type="button" class="btn btn-outline-danger"
+      <center><a class="nav-link" href="#"><button type="button" class="btn btn-outline-danger"
             style="height:50px;width:200px">Courses Overview</button></a></center>
     </div>
   </div>
@@ -347,7 +339,7 @@
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2>About <em>The</em> <span>Instructors</span></h2>
+            <h2>About The <em>Founders</em> &amp; <span>Instructors</span></h2>
           </div>
         </div>
       </div>
@@ -357,7 +349,7 @@
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="hidden-content">
                 <h4>Utkarsh Gupta</h4>
-                <p> Co-Founder SKILLCLAN <br> Python Enthusiast, Winner of E-yantra by IIT bombay (Robotics)</p>
+                <p> Co-Founder SKILLCLAN <br> Python Enthusiast, E-yantra by IIT bombay Robotics Competition Winner</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.jpg" alt="">
@@ -369,8 +361,8 @@
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
               <div class="hidden-content">
-                <h4>Saksham Garg</h4>
-                <p>Co-founder Skill Clan. BTech in Information Technolgy. C++, Data Science ,Working with Python and Python GUI.</p>
+                <h4>Website Reporting</h4>
+                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.jpg" alt="">
@@ -382,8 +374,8 @@
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.5s">
               <div class="hidden-content">
-                <h4>Akash Sharma</h4>
-                <p>Co-founder Skill Clan ,Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                <h4>Performance Tests</h4>
+                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.jpg" alt="">
@@ -496,11 +488,11 @@
       <div class="row">
         <div class="col-lg-6 align-self-center wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.25s">
           <div class="section-heading">
-            <h2>To Book A FREE Trial Class</h2>
-            <p>Tap the button below to whatsapp us or to call us</p>
+            <h2>Feel Free To Send Us a Message Us About your Carreer</h2>
+            <p>Please press the button below to whatsapp us or to call us</p>
             <div class="phone-info">
-              <h4>For any enquiry, Whatsapp / Call Us: <span> <a href="https://wa.me/919717020263">
-                 <i class="fa fa-whatsapp" aria-hidden="true"></i></a><a href="https://wa.me/919717020263">+91 97170 20263</a></span></h4>
+              <h4>For any enquiry, Whatsapp / Call Us: <span> <a href="https://wa.me/919717020263"> <i
+                      class="fa fa-phone"></i></a><a href="https://wa.me/919717020263">+91 97170 20263</a></span></h4>
             </div>
           </div>
         </div>
@@ -550,6 +542,8 @@
       <div class="row">
         <div class="col-lg-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.25s">
           <p> &copy;Copyright 2021 Skill-Clan Academy All Rights Reserved.
+
+            <br>Design: <a rel="nofollow" href="https://github.com/utkarsh9801">Utkarsh Gupta</a>
           </p>
         </div>
       </div>
