--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </div>
             <div class="col-lg-6">
               <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                <img src="assets/images/banner-right-image.png" alt="team meeting">
+                <img src="assets/images/banner-right-image.jpeg" alt="team meeting">
               </div>
             </div>
           </div>
