--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           </div>
         </div>
       </div>
-      <center><a class="nav-link" href="/courseoverview.html"><button type="button" class="btn btn-outline-danger"
+      <center><a class="nav-link" href="courseoverview.html"><button type="button" class="btn btn-outline-danger"
             style="height:50px;width:200px">Courses Overview</button></a></center>
     </div>
   </div>
