--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <li class="scroll-to-section"><a href="#blog">Blog</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Us</a></li>
               <li class="scroll-to-section">
-                <div class="main-red-button"><a href="#contact">Book A Trial Class Now</a></div>
+                <div class="main-red-button"><a href="#contact">Book A Free Trial Class Now</a></div>
               </li>
             </ul>
             <a class='menu-trigger'>
