--- a/courseoverview.html
+++ b/courseoverview.html
@@ -88,10 +88,10 @@
               <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
               <li class="scroll-to-section"><a href="index.html">About Us</a></li>
               <li class="scroll-to-section"><a href="index.html">Our Course </a></li>
-              <li class="scroll-to-section"><a href="index.html">Blog</a></li>
+              <li class="scroll-to-section"><a href="blog.html">Blog</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Us</a></li>
               <li class="scroll-to-section">
-                <div class="main-red-button"><a href="#contact">Contact Now</a></div>
+                <div class="main-red-button"><a href="contact.html">Book A Free Trial</a></div>
               </li>
             </ul>
             <a class='menu-trigger'>
@@ -117,18 +117,17 @@
             <p>We provide a variety of skill classes for our students. Our foremost priority is to give a genuine teaching experience. There's a high demand for skillful people, whether it's Coding, Robotics, Digital Marketing, Entrepreneurship, or Trading. We want India to be the next superpower so for that our youths should be competent.
               <br>  We have well-planned courses from Beginner Level to the Advance Level.</p>
           </div>
-          <div class="row" style="text-align: justify;">
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
-                <h4>Digital Marketing</h4>
-                <span style="font-size: small;">Coming Soon</span>
+                <h4 style="color: rgb(5, 86, 133);">Coding with C++</h4>
+                <span style="font-size:small">Live</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="second-bar progress-skill-bar">
-                <h4>Programming Language</h4>
+                <h4 style="color: rgb(5, 86, 133);" >Programming with Python</h4>
                 <span style="font-size: small;">Live</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -142,6 +141,15 @@
                 <div class="full-bar"></div>
               </div>
             </div>
+            <div class="row" style="text-align: justify;">
+              <div class="col-lg-12">
+                <div class="first-bar progress-skill-bar">
+                  <h4>Digital Marketing</h4>
+                  <span style="font-size: small;">Coming Soon</span>
+                  <div class="filled-bar"></div>
+                  <div class="full-bar"></div>
+                </div>
+              </div>
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
                 <h4>Finance</h4>
@@ -176,7 +184,7 @@
       </div>
       <div class="row">
         <div class="col-lg-6 col-sm-6">
-          <a href="#">
+          <a href="contact.html">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="showed-content" style="text-align: center;
               font-size: smaller;
@@ -207,14 +215,14 @@
                   
                     Student Must have a stable internet connection and a device to to code on</strong>
                .</p>
-               <center><a class="scroll-to-section" href="#contact"><button type="button" class="btn btn-outline-danger"
+               <center><a  href="contact.html"><button type="button" class="btn btn-outline-danger"
                 style="height:50px;width:200px">Book A Class</button></a></center>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-6 col-sm-6">
-          <a href="#">
+          <a href="contact.html">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="showed-content" style="text-align: center;
               font-size: smaller;
@@ -250,7 +258,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-sm-6">
-          <a href="#">
+          <a href="contact.html">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="showed-content" style="text-align: center;
               font-size: smaller;
@@ -286,7 +294,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-sm-6">
-          <a href="#">
+          <a href="contact.html">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="showed-content" style="text-align: center;
               font-size: smaller;
@@ -320,133 +328,6 @@
               </div>
             </div>
           </a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="blog" class="our-blog section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
-          <div class="section-heading">
-            <h2>Check Out What Is <em>Trending</em> In Our Latest <span>News</span></h2>
-          </div>
-        </div>
-        <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
-          <div class="top-dec">
-            <img src="assets/images/blog-dec.png" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
-          <div class="left-image">
-            <a href="#"><img src="assets/images/big-blog-thumb.jpg" alt="Workspace Desktop"></a>
-            <div class="info">
-              <div class="inner-content">
-                <ul>
-                  <li><i class="fa fa-calendar"></i> 24 Mar 2021</li>
-                  <li><i class="fa fa-users"></i> TemplateMo</li>
-                  <li><i class="fa fa-folder"></i> Branding</li>
-                </ul>
-                <a href="#"><h4>SEO Agency &amp; Digital Marketing</h4></a>
-                <p>Lorem ipsum dolor sit amet, consectetur and sed doer ket eismod tempor incididunt ut labore et dolore magna...</p>
-                <div class="main-blue-button">
-                  <a href="#">Discover More</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
-          <div class="right-list">
-            <ul>
-              <li>
-                <div class="left-content align-self-center">
-                  <span><i class="fa fa-calendar"></i> 18 Mar 2021</span>
-                  <a href="#"><h4>New Websites &amp; Backlinks</h4></a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
-                </div>
-                <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
-                </div>
-              </li>
-              <li>
-                <div class="left-content align-self-center">
-                  <span><i class="fa fa-calendar"></i> 14 Mar 2021</span>
-                  <a href="#"><h4>SEO Analysis &amp; Content Ideas</h4></a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
-                </div>
-                <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
-                </div>
-              </li>
-              <li>
-                <div class="left-content align-self-center">
-                  <span><i class="fa fa-calendar"></i> 06 Mar 2021</span>
-                  <a href="#"><h4>SEO Tips &amp; Digital Marketing</h4></a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
-                </div>
-                <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <div id="contact" class="contact-us section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <div class="section-heading">
-            <h2>To Book A FREE Trial Class</h2>
-            <p>Please press the button below to whatsapp us or to call us</p>
-            <div class="phone-info">
-              <h4>For any enquiry, Whatsapp / Call Us: <span> <a href="https://wa.me/919717020263"> 
-                <i class="fa fa-whatsapp" aria-hidden="true"></i></a><a href="https://wa.me/919717020263">+91 97170 20263</a></span></h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
-          <form id="contact" action="https://submit-form.com/IJP9uxp3
-          " method="POST">
-            <div class="row">
-              <div class="col-lg-6">
-                <fieldset>
-                  <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
-                </fieldset>
-              </div>
-              <div class="col-lg-6">
-                <fieldset>
-                  <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
-                </fieldset>
-              </div>
-              <div class="col-lg-12">
-                <fieldset>
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email"
-                    required="">
-                </fieldset>
-              </div>
-              <div class="col-lg-12">
-                <fieldset>
-                  <textarea name="message" type="text" class="form-control" id="message" placeholder="Message"
-                    required=""></textarea>
-                </fieldset>
-              </div>
-              <div class="col-lg-12">
-                <fieldset>
-                  <button type="submit" id="form-submit" class="main-button ">Send Message</button>
-                </fieldset>
-              </div>
-            </div>
-            <div class="contact-dec">
-              <img src="assets/images/contact-decoration.png" alt="">
-            </div>
-          </form>
         </div>
       </div>
     </div>
