--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <li class="scroll-to-section"><a href="#blog">Blog</a></li>
               <li class="scroll-to-section"><a href="#contact">Contact Us</a></li>
               <li class="scroll-to-section">
-                <div class="main-red-button"><a href="#contact">Contact Now</a></div>
+                <div class="main-red-button"><a href="contact.html">Book A Free Trial</a></div>
               </li>
             </ul>
             <a class='menu-trigger'>
@@ -282,7 +282,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
-                <h4>Coding With C++</h4>
+                <h4 style="color: rgb(5, 86, 133);">Coding With C++</h4>
                 <span style="font-size:small">Live</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -290,7 +290,7 @@
             </div>
             <div class="col-lg-12">
               <div class="second-bar progress-skill-bar">
-                <h4>Programming With Python</h4>
+                <h4 style="color: rgb(5, 86, 133);">Programming With Python</h4>
                 <span style="font-size:small">Live</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -307,6 +307,14 @@
             <div class="col-lg-12">
               <div class="first-bar progress-skill-bar">
                 <h4>Finance</h4>
+                <span style="font-size:small">Coming Soon</span>
+                <div class="filled-bar"></div>
+                <div class="full-bar"></div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="first-bar progress-skill-bar">
+                <h4>Digital Marketing</h4>
                 <span style="font-size:small">Coming Soon</span>
                 <div class="filled-bar"></div>
                 <div class="full-bar"></div>
@@ -333,12 +341,12 @@
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading  wow bounceIn" data-wow-duration="1s" data-wow-delay="0.2s">
-            <h2>About <em>The</em> <span>Instructors</span></h2>
+            <h2>The Team <em>That Makes</em> It <span>Possible</span></h2>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
               <div class="hidden-content">
@@ -351,7 +359,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
               <div class="hidden-content">
@@ -364,25 +372,12 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <a href="#">
             <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.5s">
               <div class="hidden-content">
                 <h4>Akash Sharma</h4>
-                <p>Co-founder Skill Clan ,Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
-              </div>
-              <div class="showed-content">
-                <img src="assets/images/portfolio-image.jpg" alt="">
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <a href="#">
-            <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.6s">
-              <div class="hidden-content">
-                <h4>Data Analysis</h4>
-                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                <p>Co-founder Skill Clan. Spl. in Blockchain, Finance, Digital Marketing and Ethical Hacker.</p>
               </div>
               <div class="showed-content">
                 <img src="assets/images/portfolio-image.jpg" alt="">
@@ -399,7 +394,7 @@
       <div class="row">
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="section-heading">
-            <h2>Check Out What Is <em>Trending</em> In Our Latest <span>News</span></h2>
+            <h2>Check Out <em>Our Latest</em> Updates <span>What's New!</span></h2>
           </div>
         </div>
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
@@ -411,7 +406,7 @@
       <div class="row">
         <div class="col-lg-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="left-image">
-            <a href="#"><img src="assets/images/big-blog-thumb.jpg" alt="Workspace Desktop"></a>
+            <a href="blog.html"><img src="assets/images/big-blog-thumb.jpg" alt="Workspace Desktop"></a>
             <div class="info">
               <div class="inner-content">
                 <ul>
@@ -419,13 +414,13 @@
                   <li><i class="fa fa-users"></i> TemplateMo</li>
                   <li><i class="fa fa-folder"></i> Branding</li>
                 </ul>
-                <a href="#">
+                <a href="blog.html">
                   <h4>SEO Agency &amp; Digital Marketing</h4>
                 </a>
                 <p>Lorem ipsum dolor sit amet, consectetur and sed doer ket eismod tempor incididunt ut labore et dolore
                   magna...</p>
                 <div class="main-blue-button">
-                  <a href="#">Discover More</a>
+                  <a href="blog.html">Discover More</a>
                 </div>
               </div>
             </div>
@@ -437,37 +432,37 @@
               <li>
                 <div class="left-content align-self-center">
                   <span><i class="fa fa-calendar"></i> 18 Mar 2021</span>
-                  <a href="#">
+                  <a href="blog.html">
                     <h4>New Websites &amp; Backlinks</h4>
                   </a>
                   <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
                 </div>
                 <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
+                  <a href="blog.html"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
                 </div>
               </li>
               <li>
                 <div class="left-content align-self-center">
                   <span><i class="fa fa-calendar"></i> 14 Mar 2021</span>
-                  <a href="#">
+                  <a href="blog.html">
                     <h4>SEO Analysis &amp; Content Ideas</h4>
                   </a>
                   <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
                 </div>
                 <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
+                  <a href="blog.html"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
                 </div>
               </li>
               <li>
                 <div class="left-content align-self-center">
                   <span><i class="fa fa-calendar"></i> 06 Mar 2021</span>
-                  <a href="#">
+                  <a href="blog.html">
                     <h4>SEO Tips &amp; Digital Marketing</h4>
                   </a>
                   <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
                 </div>
                 <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
+                  <a href="blog.html"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
                 </div>
               </li>
             </ul>
